...
                        .accessibility(identifier: "CategoriesTab")
                }
                RecurringTaskListView()
                    .tabItem {
                        Label(Localization.labels.recurringTasksNav, systemImage: "checklist")
                    }.tag(ClaraTab.recurringtasks.intValue)
                    .accessibility(identifier: "RecurringTaskTab")
            }
            .tabViewStyle(.tabBarOnly)
                        
            if showRandomTodoView {
                RandomTodoView(isPresented: $showRandomTodoView)
                    .transition(.opacity)
...
    }

}

enum ClaraTab {
    case all
    case today
    case recurringtasks
    case categories
    
    var intValue : Int{
        switch self {
        case .all: return 0
...
