...
                                        Button(role: .destructive) {
                                            todoViewModel.deleteTodo(todo)
                                        } label: {
                                            Label(Localization.labels.delete, systemImage: "trash")
                                        }
                                        .tint(Color.theme.red)
                                        .accessibilityIdentifier("TodaysTodosDeleteTodo")
                                        
                                    }
                                    .swipeActions(edge: .leading, allowsFullSwipe: true) {
                                        
                                        Button {
                                            todoViewModel.setToDone(todayTodo)
...
                                                            todoViewModel.addRecurringTaskAsTodoForToday(todaysTask)
                                                        }
                                                    } label: {
                                                        Label("Add to Today", systemImage: "plus.square")
                                                    }
                                                    .tint(Color.theme.green)
                                                    .accessibilityIdentifier("AddRecurringTaskAsTodayTodoButton")
                                                }
                                        }
                                    }
                                    .contentMargins(.top, 0, for: .scrollContent)
                                    .padding(.top, 20)
                                    .background(Color.clear)
...
